# cullr

./: Cargo.toml  LICENSE  README.md  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
packaging/linux/: AppRun  cullr.desktop
src/: app.rs  cli.rs  decode.rs  delete.rs  gui.rs  image_cache.rs  input.rs  lib.rs  main.rs  metadata.rs  scanner.rs  sorter.rs  state.rs  thumbnail.rs  video.rs
src/renderer/: chafa.rs  mod.rs  native.rs
src/ui/: confirm.rs  grid.rs  mod.rs  overlays.rs  preview.rs
tests/: integration.rs
