[package]
name = "cullr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

# GPU windowed frontend: decode once, let the GPU scale to any window size.
eframe = "0.31"
image = { version = "0.25", default-features = true }
# libjpeg-turbo bindings: SIMD + scaled (1/8..1/1) decode for fast JPEG previews.
turbojpeg = "1"

jwalk = "0.8"
flume = "0.11"
lru = "0.14"
indexmap = "2"

time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
kamadak-exif = "0.6"

icu = { version = "2", features = ["compiled_data"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
